working and tested delete
