# apiserver/src/controllers/UserController.ts
@@ -5,6 +5,7 @@ import {
 	Delete,
 	Get,
 	Path,
+	Post,
 	Put,
 	Response,
 	Route,
@@ -18,12 +19,13 @@ import MailAlreadyUsedError from "./../errors/UserErrors/MailAlreadyUsedError";
 import MailIsInvalidError from "./../errors/UserErrors/MailIsInvalidError";
 import FieldIsMissingError from "./../errors/FieldIsMissingError";
 import UserNotFoundError from "./../errors/UserErrors/UserNotFoundError";
-import NotUUIDError from "../errors/NotUUIDError";
-import { isValidEmail, isValidUUID } from "./../helpers/validators";
+import { isValidEmail } from "./../helpers/validators";
 
-type CreateUserDTO = Omit<User, "id" | "friends" | "createdDate">;
-type UserIdDTO = Pick<User, "id">;
-type UserDTO = Pick<User, "displayName" | "email">;
+// TODO: Follow https://github.com/lukeautry/tsoa/issues/911 to remove this workaround
+type Expand<T> = { [K in keyof T]: T[K] };
+interface CreateUserDTO extends Expand<Omit<User, "id" | "friends" | "createdDate">> {}
+interface UserIdDTO extends Expand<Pick<User, "id">> {}
+interface UserDTO extends Expand<Pick<User, "displayName" | "email">> {}
 
 @Security("auth0") // Follow https://github.com/lukeautry/tsoa/issues/1082 for root-level security
 @Route("users")
@@ -34,13 +36,14 @@ export class UserController extends Controller {
 	 * created by Auth0, we manage a user database to store preferences,
 	 * friends and much more.
 	 * @param {CreateUserDTO} body data to create a user
-	 * @returns {Promise<UserDTO>} the created user
+	 * @returns {Promise<UUID>} UUID of the created user
 	 */
 	@SuccessResponse(200)
-	@Response<FieldIsMissingError>(400)
-	@Response<MailIsInvalidError>(400)
-	@Response<MailAlreadyUsedError>(400)
-	@Put("")
+	@Response<FieldIsMissingError | MailIsInvalidError | MailAlreadyUsedError>(
+		400,
+		"If one field is missing, mail is invalid or already used"
+	)
+	@Post()
 	async create(@Body() body: CreateUserDTO): Promise<UserIdDTO> {
 		if (!body.email || !body.displayName) {
 			throw new FieldIsMissingError(!body.email ? "email" : "displayName");
@@ -60,21 +63,32 @@ export class UserController extends Controller {
 	}
 
 	/**
-	 * Delete logged user.
-	 * @param {UUID} userID the GUID of user
+	 * Edit a user.
+	 * @returns {Promise<UUID>} UUID of the created user
+	 * @param {UUID} userId the GUID of user
+	 * @param {UserDTO} body data to edit a user
 	 */
+	@SuccessResponse(200)
+	@Put("{userId}")
+	async edit(@Path() userId: UUID, @Body() body: Partial<UserDTO>): Promise<void> {
+		await UserService.edit(userId, body);
+	}
+
+	/**
+	 * Delete logged user.
+	 * @param {UUID} userId the GUID of user
+	 */
+	@SuccessResponse(204)
 	@Delete("{userId}")
 	async delete(@Path() userId: UUID): Promise<void> {
-		if (!isValidUUID(userId)) {
-			throw new NotUUIDError(userId);
-		}
 		await UserService.delete(userId);
 	}
 
 	/**
 	 * Gets all user's data.
-	 * @returns {Promise<User>} the user
+	 * @returns {Promise<UserDTO[]>} all users
 	 */
+	@SuccessResponse(200)
 	@Get()
 	async getAll(): Promise<UserDTO[]> {
 		const users: User[] = await UserService.getAll();
@@ -86,14 +100,13 @@ export class UserController extends Controller {
 
 	/**
 	 * Gets logged user's data.
-	 * @param {UUID} userID the GUID of user
-	 * @returns {Promise<UserDTO>} the user
+	 * @param {UUID} userId the GUID of user
+	 * @returns {Promise<UserDTO>} the required user
 	 */
+	@SuccessResponse(200)
+	@Response<UserNotFoundError>(400, "If userId is incorrect")
 	@Get("{userId}")
 	async get(@Path() userId: UUID): Promise<UserDTO> {
-		if (!isValidUUID(userId)) {
-			throw new NotUUIDError(userId);
-		}
 		const user: User | undefined = await UserService.get(userId);
 		if (!user) {
 			throw new UserNotFoundError();
